add annexe-task and random-event

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,17 +21,25 @@
                             <app-task [style.z-index]="2"></app-task>
                             <app-task [style.z-index]="1"></app-task>  
                         </div>
+                        <div style="display: flex;" [style.z-index]="2">
+                            <app-annexe-task [style.z-index]="2"></app-annexe-task>
+                        </div>
+                        <div style="display: flex;" [style.z-index]="2">
+                            <app-random-event [style.z-index]="2"></app-random-event>
+                        </div>
                     </div>
                 </div>
                 <div style="display: flex;">
                     <app-role [style.z-index]="10"></app-role>
                     <div [style.z-index]="1">
                         <div style="display: flex;" [style.z-index]="2">
-                            <app-task [style.z-index]="2"></app-task>
-                            <app-task [style.z-index]="1"></app-task>  
+                            <app-task [style.z-index]="3"></app-task>
+                            <app-annexe-task [style.z-index]="2"></app-annexe-task>
+                            <app-random-event [style.z-index]="1"></app-random-event>
                         </div>
                     </div>
                 </div>
+                
             </div>
         </div>
     </div> 
