--- a/src/app/pieces/random-event/random-event.component.html
+++ b/src/app/pieces/random-event/random-event.component.html
@@ -94,7 +94,7 @@
     <div class="piece-form">
         <div class="piece-form-top">
             <input class="piece-form-top-identifier" name="identifier" type="text" placeholder="A" min="1" maxlength="5"/>
-            <div class="piece-form-top-title">Tâche</div>
+            <div class="piece-form-top-title">Événement<br>aléatoire</div>
             <button mat-button class="piece-form-top-symbol" (click)="changeDisplaySymbolChoice()">
                 <mat-icon *ngIf="symbol" [style.color]="symbolColor" [fontIcon]="symbol"></mat-icon>
             </button>    
