--- a/src/app/pieces/random-event/random-event.component.scss
+++ b/src/app/pieces/random-event/random-event.component.scss
@@ -1,5 +1,5 @@
 .piece {
-    --piece-background-color: #b9dfe3;
+    --piece-background-color: #bfdaa3;
 
     width: 400px;
     height: 400px;
@@ -224,7 +224,7 @@
             resize: none;
             flex-grow: 1;
             font-size: 15px;
-            background-image: url("../../../assets/background-images/tache.png");
+            background-image: url("../../../assets/background-images/event.png");
             background-position: center;
             background-repeat: no-repeat;
             background-size: 30%;
