--- a/src/app/pieces/annexe-task/annexe-task.component.scss
+++ b/src/app/pieces/annexe-task/annexe-task.component.scss
@@ -5,7 +5,132 @@
     height: 400px;
     position: relative;
     background-color: var(--piece-background-color);
-    //border: solid black 2px;
+    transition: all 0.5s ease;
+
+    &-menu {
+        position: absolute;
+        width: 150px;
+        height: 50px;
+        background-color: #f7f7f7;
+        z-index: -1;
+        top: -50px;
+        left: 50%;
+        transform: translateX(-50%);
+        transition: transform 0.5s ease;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        border: solid black 1px;
+        display: flex;
+        padding: 15px 20px 15px 20px;
+        justify-content: space-around;
+        mat-icon {
+            cursor: pointer;
+            transform: scale(1.1);
+        }
+        mat-icon:hover {
+            opacity: 0.75;
+        }
+    }
+    &-menu.show {
+        transform: translateX(-50%) translateY(0);
+    }
+    &-menu.hide {
+        transform: translateX(-50%) translateY(100%);
+    }
+
+    &-prerequires {
+        position: absolute;
+        width: 350px;
+        height: 150px;
+        background-color: #f7f7f7;
+        z-index: -1;
+        bottom: 0;
+        left: 25px;
+        border: solid black 1px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        transition: transform 0.5s ease;
+        border-top: none;
+        display: flex;
+        flex-direction: row;
+
+        &-title {
+            margin-left: auto;
+            margin-right: auto;
+            font-family: 'Glacial Indifference Bold';
+            font-size: 14px;
+        }
+        
+        &-form {
+            display: flex;
+            flex-direction: column;
+            overflow: scroll;
+        }
+
+        &-prerequires {
+            position: relative;
+            border-right: solid #a3a3a3 1px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 50%;
+            height: 90%;
+            border-bottom-left-radius: 10px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        &-ressources {
+            width: 50%;
+            height: 90%;
+            border-bottom-right-radius: 10px;
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 50%;
+            height: 90%;
+            border-bottom-left-radius: 10px;
+            display: flex;
+            flex-direction: column;
+
+            &-element {
+                display: flex;
+                flex-direction: row;
+                width: 100%;
+                margin-top: 5px;
+                &-checkbox {
+                    position: relative;
+                    width: 50%;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                }
+
+                &-quantity {
+                    position: relative;
+                    width: 50%;
+                    display: flex;
+                    padding-right: 5px;
+                    justify-content: flex-end;
+                    input {
+                        width: 20px;
+                        border: none;
+                        border-radius: 10px;
+                        text-align: center;
+                    }
+                    select {
+                        width: 40px;
+                        background-color: white;
+                        border: none;
+                        border-radius: 10px;
+                        margin-right: 5px;
+                    }
+                }
+            }
+        }
+    }
+    &-prerequires.show {
+        transform: translateY(100%);
+    }
 
     &-attach {
         z-index: 1;
@@ -31,13 +156,106 @@
             position: absolute;
             left: -20px;
             top: 200px;
-            //transform: translateY(-50%);
         }
     }
 
     &-form {
-        display: flex;
+        height: 100%;
+        padding: 0px 10px 0px 35px;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        z-index: 2;
+        input {
+            height: 40px;
+            border-radius: 10px;
+            border: none;
+            padding: 5px 10px 5px 10px;
+            font-size: 15px;
+        }
+        textarea {
+            border-radius: 20px;
+            padding: 10px;
+            border: none;
+            resize: none;
+            flex-grow: 1;
+            font-size: 15px;
+            background-image: url("../../../assets/background-images/annexe.png");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: 30%;
+        }
+        select {
+            background-color: white;
+            border: none;
+            height: 50px;
+            border-radius: 10px;
+            padding: 5px 10px 5px 10px;
+        }
+        &-top {
+            margin-top: 20px;
+            display: flex;
+            flex-direction: row;
+            //justify-content: space-between;
+            &-identifier {
+                width: 50px;
+                text-align: center;
+            }
+            &-title {
+                font-size: 25px;
+                font-family: 'Glacial Indifference Bold';
+                position: relative;
+                margin-left: 10px;
+            }
+            &-symbol {
+                width: 50px;
+                height: 50px;
+                background-color: white;
+                border-radius: 10px;
+                cursor: pointer;
+                mat-icon {
+                    transform: scale(1.3);
+                    overflow: visible;
+                }
+            }
+        }
+        &-content {
+            margin-top: 10px;
+            height: 100%;
+            margin-bottom: 10px;
+        }
+        &-bottom {
+            display: flex;
+            flex-direction: row;
+            margin-bottom: 10px;
+            justify-content: space-between;
+            &-duration {
+                input {
+                    border-top-right-radius: 0px;
+                    border-bottom-right-radius: 0px;
+                    width: 20px;
+                    text-align: center;
+                    z-index: 2;
+                }
+                select {
+                    width: 60px;
+                    border-top-left-radius: 0px;
+                    border-bottom-left-radius: 0px;
+                    z-index: 1;
+                }
+            }
+            &-prerequires {
+                width: 100px;
+                height: 50px;
+                background-color: white;
+                border-radius: 10px;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
     }
 }
 
