characters sider-pieces

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,6 +47,7 @@
     <div class="container-sider">
         <app-comments class="container-sider-element"></app-comments>
         <app-repeat class="container-sider-element"></app-repeat>
+        <app-characters class="container-sider-element"></app-characters>
     </div>
 
 
