--- a/src/app/sider-pieces/repeat/repeat.component.scss
+++ b/src/app/sider-pieces/repeat/repeat.component.scss
@@ -47,7 +47,7 @@
             flex-direction: column;
 
             textarea {
-                padding: 10px;
+                padding: 5px 10px 5px 10px;
                 margin-top: 10px;
                 resize: vertical;
                 border: none;
