add rules sider-piece

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,7 @@
         <app-comments class="container-sider-element"></app-comments>
         <app-repeat class="container-sider-element"></app-repeat>
         <app-characters class="container-sider-element"></app-characters>
+        <app-rules class="container-sider-element"></app-rules>
     </div>
 
 
