add settings menu with Unity mode, save, load

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,6 +51,16 @@
         <app-rules class="container-sider-element"></app-rules>
     </div>
 
+    <div class="container-settings">
+        <div class="container-settings-mode">
+            <input name="unity" type="checkbox"/>
+            <label for="unity">Intégrer le jeu sous Unity</label>
+        </div>
+        <button mat-mini-fab color="white"><mat-icon fontIcon="save"></mat-icon></button>
+        <button mat-mini-fab color="white"><mat-icon fontIcon="upload-file"></mat-icon></button>
+
+    </div>
+
 
 </div>
 
