--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,7 @@
 
     display: flex;
     flex-direction: row;
+    z-index: 1;
 
     &-main {
         position: absolute;
@@ -45,6 +46,31 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+        }
+    }
+
+    &-settings {
+        position: fixed;
+        width: 300px;
+        right: 350px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    
+        z-index: 2;
+    
+        &-mode {
+            width: 150px;
+            background-color: white;
+            box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
+            padding: 5px;
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        button {
+            width: 50px;
+            height: 50px;
         }
     }
 }
