change 'autres' by'moyens de communication' and 'divers' in piece mission-context

--- a/src/app/pieces/mission-context/mission-context.component.html
+++ b/src/app/pieces/mission-context/mission-context.component.html
@@ -19,9 +19,19 @@
             <label for="intrigue">Intrigue</label>
             <textarea name="intrigue" placeholder="Concevez un site web ergonomique pour votre premier client"></textarea>  
         </div>
+        <!--
         <div class="piece-form-other">
             <label for="other">Autre</label>
             <textarea name="other"></textarea>  
         </div> 
+        -->
+        <div class="piece-form-communication">
+            <label for="communication">Moyen(s) de communication</label>
+            <textarea name="communication"></textarea>
+        </div>
+        <div class="piece-form-divers">
+            <label for="divers">Divers</label>
+            <textarea name="divers"></textarea>
+        </div>
     </div>
 </div>
