--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,9 @@
 .container {
-
     display: flex;
     flex-direction: row;
     z-index: 1;
 
-    &-main {
+    &-appDragScroll {
         position: absolute;
         height: 100%;
         width: calc(100% - 322px);
@@ -14,17 +13,80 @@
         overflow: scroll;
         -ms-overflow-style: none;
         scrollbar-width: none;
-
-        &-scenario {
-            position: relative;
-            transform-origin: top left;
-            padding: 60px 5px 10px 5px;
-            margin-right: 7px;
-        }
     }
 
-    &-main::-webkit-scrollbar {
+    &-appDragScroll::-webkit-scrollbar {
         display: none;
+    }
+
+    &-appMouseWheelZoom {
+        position: relative;
+        transform-origin: top left;
+        padding: 60px 5px 10px 5px;
+        margin-right: 7px;
+    }
+
+    &-scenario {
+        &-chronologie {
+            margin-bottom: 100px;
+
+            &-title {
+                font-family: 'Glacial Indifference Bold';
+                font-size: 20px;
+                margin-bottom: 10px;
+            }
+
+            &-steps {
+                display: flex;
+                flex-direction: row;
+            }
+        }
+
+        &-main {
+            display: flex;
+            flex-direction: row;
+
+            &-gamePieces {
+                display: flex;
+                flex-direction: column;
+            }
+
+            &-missions {
+                display: flex;
+                flex-direction: column;
+
+                &-mission {
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 100px;
+
+                    &-missionPieces {
+                        display: flex;
+                        flex-direction: column;
+                    }
+
+                    &-roles {
+                        display: flex;
+                        flex-direction: column;
+
+                        &-role {
+                            display: flex;
+                            flex-direction: row;
+
+                            &-tasks {
+                                display: flex;
+                                flex-direction: column;
+
+                                &-inlineTasks {
+                                    display: flex;
+                                    flex-direction: row;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 
     &-sider {
@@ -56,13 +118,12 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-    
         z-index: 2;
-    
+
         &-mode {
             width: 150px;
             background-color: white;
-            box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
+            box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
             padding: 5px;
             border-radius: 10px;
             text-align: center;
