--- a/src/app/pieces/annexe-task/annexe-task.component.scss
+++ b/src/app/pieces/annexe-task/annexe-task.component.scss
@@ -23,17 +23,21 @@
         display: flex;
         padding: 15px 20px 15px 20px;
         justify-content: space-around;
+
         mat-icon {
             cursor: pointer;
             transform: scale(1.1);
         }
+
         mat-icon:hover {
             opacity: 0.75;
         }
     }
+
     &-menu.show {
         transform: translateX(-50%) translateY(0);
     }
+
     &-menu.hide {
         transform: translateX(-50%) translateY(100%);
     }
@@ -60,7 +64,7 @@
             font-family: 'Glacial Indifference Bold';
             font-size: 14px;
         }
-        
+
         &-form {
             display: flex;
             flex-direction: column;
@@ -97,6 +101,7 @@
                 flex-direction: row;
                 width: 100%;
                 margin-top: 5px;
+
                 &-checkbox {
                     position: relative;
                     width: 50%;
@@ -111,12 +116,14 @@
                     display: flex;
                     padding-right: 5px;
                     justify-content: flex-end;
+
                     input {
                         width: 20px;
                         border: none;
                         border-radius: 10px;
                         text-align: center;
                     }
+
                     select {
                         width: 40px;
                         background-color: white;
@@ -128,12 +135,14 @@
             }
         }
     }
+
     &-prerequires.show {
         transform: translateY(100%);
     }
 
     &-attach {
         z-index: 1;
+
         &-left {
             border-top: solid black 1px;
             border-right: solid black 1px;
@@ -167,6 +176,7 @@
         flex-direction: column;
         align-items: stretch;
         z-index: 2;
+
         input {
             height: 40px;
             border-radius: 10px;
@@ -174,6 +184,7 @@
             padding: 5px 10px 5px 10px;
             font-size: 15px;
         }
+
         textarea {
             border-radius: 20px;
             padding: 10px;
@@ -184,8 +195,9 @@
             background-image: url("../../../assets/background-images/annexe.png");
             background-position: center;
             background-repeat: no-repeat;
-            background-size: 30%;
+            background-size: 100px;
         }
+
         select {
             background-color: white;
             border: none;
@@ -193,44 +205,52 @@
             border-radius: 10px;
             padding: 5px 10px 5px 10px;
         }
+
         &-top {
             margin-top: 20px;
             display: flex;
             flex-direction: row;
-            //justify-content: space-between;
             &-identifier {
                 width: 50px;
                 text-align: center;
             }
+
             &-title {
                 font-size: 25px;
                 font-family: 'Glacial Indifference Bold';
                 position: relative;
                 margin-left: 10px;
             }
+
             &-symbol {
                 width: 50px;
                 height: 50px;
                 background-color: white;
                 border-radius: 10px;
                 cursor: pointer;
+
                 mat-icon {
                     transform: scale(1.3);
                     overflow: visible;
                 }
             }
         }
+
         &-content {
             margin-top: 10px;
             height: 100%;
             margin-bottom: 10px;
         }
+
         &-bottom {
             display: flex;
             flex-direction: row;
             margin-bottom: 10px;
             justify-content: space-between;
+
             &-duration {
+                display: flex;
+
                 input {
                     border-top-right-radius: 0px;
                     border-bottom-right-radius: 0px;
@@ -238,6 +258,7 @@
                     text-align: center;
                     z-index: 2;
                 }
+
                 select {
                     width: 60px;
                     border-top-left-radius: 0px;
@@ -245,6 +266,7 @@
                     z-index: 1;
                 }
             }
+
             &-prerequires {
                 width: 100px;
                 height: 50px;
