--- a/src/app/pieces/random-event/random-event.component.scss
+++ b/src/app/pieces/random-event/random-event.component.scss
@@ -23,17 +23,21 @@
         display: flex;
         padding: 15px 20px 15px 20px;
         justify-content: space-around;
+
         mat-icon {
             cursor: pointer;
             transform: scale(1.1);
         }
+
         mat-icon:hover {
             opacity: 0.75;
         }
     }
+
     &-menu.show {
         transform: translateX(-50%) translateY(0);
     }
+
     &-menu.hide {
         transform: translateX(-50%) translateY(100%);
     }
@@ -52,14 +56,16 @@
         top: 5px;
         z-index: -1;
         transition: transform 0.5s ease;
-        
+
         label {
             font-size: 14px;
         }
+
         mat-icon {
             cursor: pointer;
             transform: scale(1.2);
         }
+
         mat-icon:hover {
             opacity: 0.75;
         }
@@ -77,6 +83,7 @@
             margin-top: 10px;
         }
     }
+
     &-symbolchoice.show {
         transform: translateX(100%);
     }
@@ -103,7 +110,7 @@
             font-family: 'Glacial Indifference Bold';
             font-size: 14px;
         }
-        
+
         &-form {
             display: flex;
             flex-direction: column;
@@ -140,6 +147,7 @@
                 flex-direction: row;
                 width: 100%;
                 margin-top: 5px;
+
                 &-checkbox {
                     position: relative;
                     width: 50%;
@@ -154,12 +162,14 @@
                     display: flex;
                     padding-right: 5px;
                     justify-content: flex-end;
+
                     input {
                         width: 20px;
                         border: none;
                         border-radius: 10px;
                         text-align: center;
                     }
+
                     select {
                         width: 40px;
                         background-color: white;
@@ -171,12 +181,14 @@
             }
         }
     }
+
     &-prerequires.show {
         transform: translateY(100%);
     }
 
     &-attach {
         z-index: 1;
+
         &-left {
             border-top: solid black 1px;
             border-right: solid black 1px;
@@ -210,6 +222,7 @@
         flex-direction: column;
         align-items: stretch;
         z-index: 2;
+
         input {
             height: 40px;
             border-radius: 10px;
@@ -217,6 +230,7 @@
             padding: 5px 10px 5px 10px;
             font-size: 15px;
         }
+
         textarea {
             border-radius: 20px;
             padding: 10px;
@@ -227,8 +241,9 @@
             background-image: url("../../../assets/background-images/event.png");
             background-position: center;
             background-repeat: no-repeat;
-            background-size: 30%;
+            background-size: 100px;
         }
+
         select {
             background-color: white;
             border: none;
@@ -236,20 +251,24 @@
             border-radius: 10px;
             padding: 5px 10px 5px 10px;
         }
+
         &-top {
             margin-top: 20px;
             display: flex;
             flex-direction: row;
+
             &-identifier {
                 width: 50px;
                 text-align: center;
             }
+
             &-title {
                 font-size: 25px;
                 font-family: 'Glacial Indifference Bold';
                 position: relative;
                 margin-left: 10px;
             }
+
             &-symbol {
                 width: 50px;
                 height: 50px;
@@ -258,23 +277,29 @@
                 cursor: pointer;
                 position: absolute;
                 right: 10px;
+
                 mat-icon {
                     transform: scale(1.3);
                     overflow: visible;
                 }
             }
         }
+
         &-content {
             margin-top: 10px;
             height: 100%;
             margin-bottom: 10px;
         }
+
         &-bottom {
             display: flex;
             flex-direction: row;
             margin-bottom: 10px;
             justify-content: space-between;
+
             &-duration {
+                display: flex;
+
                 input {
                     border-top-right-radius: 0px;
                     border-bottom-right-radius: 0px;
@@ -282,6 +307,7 @@
                     text-align: center;
                     z-index: 2;
                 }
+
                 select {
                     width: 60px;
                     border-top-left-radius: 0px;
@@ -289,6 +315,7 @@
                     z-index: 1;
                 }
             }
+
             &-prerequires {
                 width: 100px;
                 height: 50px;
