--- a/src/app/sider-pieces/repeat/repeat.component.scss
+++ b/src/app/sider-pieces/repeat/repeat.component.scss
@@ -55,6 +55,10 @@
                 flex-grow: 1;
                 min-height: 50px;
                 max-height: 100px;
+                background-image: url("../../../assets/background-images/repeat.png");
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: 30%;
             }
         }
     }
