--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,11 +24,14 @@
         transform-origin: top left;
         padding: 60px 5px 10px 5px;
         margin-right: 7px;
+        margin-top: 900px;
     }
 
     &-scenario {
         &-chronologie {
             margin-bottom: 100px;
+            position: relative;
+            left: 800px;
 
             &-title {
                 font-family: 'Glacial Indifference Bold';
@@ -57,8 +60,10 @@
 
                 &-mission {
                     display: flex;
-                    flex-direction: row;
+                    flex-direction: column;
                     margin-bottom: 100px;
+                    position: relative;
+                    top: -868px;
 
                     &-missionPieces {
                         display: flex;
