--- a/src/app/pieces/step/step.component.scss
+++ b/src/app/pieces/step/step.component.scss
@@ -5,6 +5,7 @@
     height: 300px;
     position: relative;
     background-color: var(--piece-background-color);
+    transition: all 0.5s ease;
 
     &-menu {
         position: absolute;
@@ -94,7 +95,7 @@
             background-image: url("../../../assets/background-images/step.png");
             background-position: center;
             background-repeat: no-repeat;
-            background-size: 30%;
+            background-size: 100px;
         }
 
         &-duration {
