--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,6 +46,7 @@
                                         <div class="container-scenario-main-missions-mission-roles-role-tasks-inlineTasks"
                                             [style.z-index]="2">
                                             <app-annexe-task [style.z-index]="2"></app-annexe-task>
+                                            <app-final-task [style.z-index]="1"></app-final-task>
                                         </div>
                                         <div class="container-scenario-main-missions-mission-roles-role-tasks-inlineTasks"
                                             [style.z-index]="2">
