--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,8 +40,9 @@
                                         [style.z-index]="1">
                                         <div class="container-scenario-main-missions-mission-roles-role-tasks-inlineTasks"
                                             [style.z-index]="2">
+                                            <app-task [style.z-index]="3"></app-task>
                                             <app-task [style.z-index]="2"></app-task>
-                                            <app-task [style.z-index]="1"></app-task>
+                                            <app-repeat-task [style.z-index]="1"></app-repeat-task>
                                         </div>
                                         <div class="container-scenario-main-missions-mission-roles-role-tasks-inlineTasks"
                                             [style.z-index]="2">
