add interupt sider-piece

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -137,6 +137,7 @@
     <div class="container-sider">
         <app-comments class="container-sider-element"></app-comments>
         <app-repeat class="container-sider-element"></app-repeat>
+        <app-interupt class="container-sider-element"></app-interupt>
         <app-characters class="container-sider-element"></app-characters>
         <app-rules class="container-sider-element"></app-rules>
     </div>
