--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,8 @@
                                         </div>
                                         <div class="container-scenario-main-missions-mission-roles-role-tasks-inlineTasks"
                                             [style.z-index]="2">
-                                            <app-annexe-task [style.z-index]="2"></app-annexe-task>
+                                            <app-annexe-task [style.z-index]="3"></app-annexe-task>
+                                            <app-optionnal-task [style.z-index]="2"></app-optionnal-task>
                                             <app-final-task [style.z-index]="1"></app-final-task>
                                         </div>
                                         <div class="container-scenario-main-missions-mission-roles-role-tasks-inlineTasks"
