change download icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -148,7 +148,7 @@
             <input name="unity" type="checkbox" />
             <label for="unity">Intégrer le jeu sous Unity</label>
         </div>
-        <button mat-mini-fab color="white"><mat-icon fontIcon="save"></mat-icon></button>
+        <button mat-mini-fab color="white"><mat-icon fontIcon="download_file"></mat-icon></button>
         <button mat-mini-fab color="white"><mat-icon fontIcon="upload-file"></mat-icon></button>
     </div>
 </div>
