fix path to background-images in tasks

--- a/src/app/pieces/tasks/annexe-task/annexe-task.component.scss
+++ b/src/app/pieces/tasks/annexe-task/annexe-task.component.scss
@@ -192,7 +192,7 @@
             resize: none;
             flex-grow: 1;
             font-size: 15px;
-            background-image: url("../../../assets/background-images/annexe.png");
+            background-image: url("../../../../assets/background-images/annexe.png");
             background-position: center;
             background-repeat: no-repeat;
             background-size: 100px;
