--- a/src/app/pieces/tasks/random-event/random-event.component.scss
+++ b/src/app/pieces/tasks/random-event/random-event.component.scss
@@ -238,7 +238,7 @@
             resize: none;
             flex-grow: 1;
             font-size: 15px;
-            background-image: url("../../../assets/background-images/event.png");
+            background-image: url("../../../../assets/background-images/event.png");
             background-position: center;
             background-repeat: no-repeat;
             background-size: 100px;
