--- a/src/app/pieces/tasks/task/task.component.scss
+++ b/src/app/pieces/tasks/task/task.component.scss
@@ -238,7 +238,7 @@
             resize: none;
             flex-grow: 1;
             font-size: 15px;
-            background-image: url("../../../assets/background-images/tache.png");
+            background-image: url("../../../../assets/background-images/tache.png");
             background-position: center;
             background-repeat: no-repeat;
             background-size: 100px;
