--- a/src/app/pieces/tasks/final-task/final-task.component.scss
+++ b/src/app/pieces/tasks/final-task/final-task.component.scss
@@ -226,7 +226,7 @@
             resize: none;
             flex-grow: 1;
             font-size: 15px;
-            background-image: url("../../../assets/background-images/final.png");
+            background-image: url("../../../../assets/background-images/final.png");
             background-position: center;
             background-repeat: no-repeat;
             background-size: 100px;
