add role-occurence and supplementary-task

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -136,11 +136,13 @@
     </div>
 
     <div class="container-sider">
-        <app-comments class="container-sider-element"></app-comments>
+        <app-rules class="container-sider-element"></app-rules>
+        <app-role-occurence class="container-sider-element"></app-role-occurence>
+        <app-supplementary-task class="container-sider-element"></app-supplementary-task>
         <app-repeat class="container-sider-element"></app-repeat>
         <app-interupt class="container-sider-element"></app-interupt>
         <app-characters class="container-sider-element"></app-characters>
-        <app-rules class="container-sider-element"></app-rules>
+        <app-comments class="container-sider-element"></app-comments>
     </div>
 
     <div class="container-settings">
