--- a/src/app/pieces/role/role.component.scss
+++ b/src/app/pieces/role/role.component.scss
@@ -3,7 +3,7 @@
 
     width: 400px;
     position: relative;
-    background-color: var(--piece-background-color);
+    background: linear-gradient(303deg, rgb(2, 0, 36) 0%, rgb(2, 0, 36) 25%, #9ad5ec 25%, #9ad5ec 100%);
 
     &-menu {
         position: absolute;
@@ -116,6 +116,13 @@
             font-size: 15px;
         }
 
+        img {
+            width: 20%;
+            position: absolute;
+            right: 5px;
+            top: 5px;
+        }
+
         &-title {
             margin-top: 20px;
             font-size: 25px;
@@ -133,25 +140,57 @@
             flex-direction: column;
         }
 
-        &-objective {
-            height: 250px;
-            margin-top: 10px;
+        &-description {
             display: flex;
             flex-direction: column;
 
             textarea {
-                margin-bottom: 5px;
-                background-image: url("../../../assets/background-images/role.png");
-                background-position: center;
-                background-repeat: no-repeat;
-                background-size: 30%;
+                height: 100px;
             }
         }
 
-        &-reward {
+        &-objective {
+            margin-top: 10px;
             display: flex;
             flex-direction: column;
-            height: 250px;
+
+            input {
+                margin-top: 5px;
+            }
+
+            button {
+                position: relative;
+                width: 50px;
+                height: 50px;
+                background-color: white;
+                left: 100%;
+                transform: translateX(-100%);
+                margin-top: 5px;
+                border-radius: 10px;
+
+                mat-icon {
+                    transform: scale(1.3);
+                }
+            }
+        }
+
+        &-rewards {
+            display: flex;
+            flex-direction: column;
+
+            &-reward {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+
+                select {
+                    height: 50px;
+                    border: none;
+                    border-radius: 10px;
+                    background-color: white;
+                    width: 80%;
+                }
+            }
         }
 
         &-personnalization {
@@ -159,6 +198,7 @@
                 display: flex;
                 flex-direction: column;
                 height: 150px;
+
                 textarea {
                     background-image: url("../../../assets/background-images/equipment.png");
                     background-position: center;
@@ -166,19 +206,11 @@
                     background-size: 30%;
                 }
             }
-
-            &-skills {
-                display: flex;
-                flex-direction: column;
-                height: 150px;
-            }
-
         }
 
         &-ressources {
             display: flex;
             flex-direction: column;
-            margin-bottom: 25px;
 
             &-ressource {
                 margin-top: 10px;
@@ -191,6 +223,19 @@
                     margin-bottom: 5px;
                     justify-content: space-between;
                 }
+
+                input {
+                    width: 50%;
+                }
+
+                &-name {
+                    input {
+                        background-image: url("../../../assets/background-images/object.png");
+                        background-position: center;
+                        background-repeat: no-repeat;
+                        background-size: 20%;
+                    }
+                }
             }
 
             button {
@@ -202,6 +247,43 @@
                 transform: translateX(-100%);
                 margin-top: 5px;
                 border-radius: 10px;
+
+                mat-icon {
+                    transform: scale(1.3);
+                }
+            }
+        }
+
+        &-supplementary {
+            margin-bottom: 25px;
+
+            &-name {
+                margin-top: 10px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+
+            }
+            
+            &-textarea {
+                display: flex;
+                flex-direction: column;
+
+                textarea {
+                    height: 100px;
+                }
+            }
+
+            button {
+                position: relative;
+                width: 50px;
+                height: 50px;
+                background-color: white;
+                left: 100%;
+                transform: translateX(-100%);
+                margin-top: 5px;
+                border-radius: 10px;
+
                 mat-icon {
                     transform: scale(1.3);
                 }
